# comastore_ocr

./: .gitignore  README.md  pyproject.toml  requirements.txt  training_data.jsonl
scripts/: __init__.py  convert_to_jsonl.py  process_images.py
src/comastore_ocr/: __init__.py  cli.py  config.py  convert.py  image_utils.py  openai_utils.py  processing.py  prompts.py  validation.py
src/comastore_ocr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/comastore_ocr/cli/: __init__.py  __main__.py  command_handler.py  enhanced_cli.py  process_images_handler.py  sort_text_handler.py
src/comastore_ocr/common/: __init__.py  helpers.py  image_encoder.py  image_processor_util.py  image_utils.py  image_utils_enhanced.py  image_validator.py  validation.py
src/comastore_ocr/engines/: __init__.py  base.py  factory.py  openai_engine.py
src/comastore_ocr/local_ocr/: __init__.py  sort_textual.py  text_ocr.py  text_rule.py  text_rules.py  text_rules_engine.py
src/comastore_ocr/openai/: __init__.py  openai_utils.py  prompts.py
src/comastore_ocr/processing/: __init__.py  directory_processor.py  file_filter.py  file_sorter.py  image_file_manager.py  image_processor.py  promo_inferrer.py  text_classifier.py
src/comastore_ocr/validation/: __init__.py  enhanced_validator.py  validation_result.py  validation_rule.py
